// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography tests Should Match H1 Snapshots 1`] = `
<span
  className="h1"
>
  Typography H1 Variant
</span>
`;

exports[`Typography tests Should Match H3 snapshots 1`] = `
<span
  className="h3"
>
  Typography H3 Variant
</span>
`;

exports[`Typography tests Should Match H4 snapshots 1`] = `
<span
  className="h4"
>
  Typography H4 Variant
</span>
`;

exports[`Typography tests Should Match H5 snapshots 1`] = `
<span
  className="h5"
>
  Typography H5 Variant
</span>
`;

exports[`Typography tests Should Match H6 snapshots 1`] = `
<span
  className="h6"
>
  Typography H6 Variant
</span>
`;

exports[`Typography tests Should Match Link snapshots 1`] = `
<span
  className="link"
>
  Typography link Variant
</span>
`;

exports[`Typography tests Should Match p snapshots 1`] = `
<span
  className="p"
>
  Typography p Variant
</span>
`;

exports[`Typography tests should match H2 snapshot 1`] = `
<span
  className="h2"
>
  Typography H2 Variant
</span>
`;
